syntax = "proto3";
option go_package = "/auth-subscriber;pb";


service User {
  rpc Create (Request) returns (Response);
}

message Request {
  int32 id = 1;
  string role = 2;
  int32 SubscriptionType = 3;
}

message Response {
  bool IsSuccess = 1;
}